--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="img-container">
 
         <section class="container">
-            <img> </img>
+            <img src="https://images.unsplash.com/photo-1589965716319-4a041b58fa8a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" class="dog-img"> </img>
 
     </section>
 </section>
@@ -50,7 +50,9 @@
 
 <section class="column">
 
-<section class="item"> </section>
+<section class="item">
+    <h2>Dog Profile Card</h2>
+</section>
     <section class="item"> </section>
 
 
