--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Pup List</title>
-    <link href="stylesheet.css">
+    <link href="stylesheet.css" rel="stylesheet">
+
+    <link href="normalize.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -54,7 +56,14 @@
     <h2>Dog Profile Card</h2>
 </section>
     <section class="item"> </section>
+<ul>
+    <li>Sex: Male</li>
+    <li>Age: 3</li>
+    <li>Likes: Ham, Sniffing </li>
+    <li>Dislikes: Sleep, Water </li>
 
+
+</ul>
 
 
 
