--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link href="stylesheet.css" rel="stylesheet">
 
     <link href="normalize.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header>
-   <h1> The Pup List </h1>
+   <h1 id = "head-title"> The Pup List </h1>
    <h2 id = "dog-name">Doug Default</h2>
 </header>
 <section class="sections-container">
@@ -47,13 +52,15 @@
 
 </section>
 
+</section>
+
 
 
 
 <section class="column">
 
-<section class="item">
-    <h2>Dog Profile Card</h2>
+<section class="item2">
+    <h3 id="head-title2">Dog Profile</h3>
 </section>
     <section class="item"> </section>
 <ul>
@@ -61,6 +68,7 @@
     <li>Age: 3</li>
     <li>Likes: Ham, Sniffing </li>
     <li>Dislikes: Sleep, Water </li>
+    <li>Additional: Doug likes to snuggle with plushies and burrow into blankets on stormy nights.</li>
 
 
 </ul>
@@ -78,6 +86,8 @@
 
 
 
+
+</section>
 
 </section>
 
