--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 
 
     <section class="item">
-        <select>
+        <select class="breeds">
 
             <option value="starter" selected> Select Me! </option>
 
-        <option value="Shih Tzu">Shih Tzu</option>
 
 
 
